--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,8 @@
 /* EXERCÍCIO 1: fontes */
 /* importá-las aqui... e definir as `font-family` da turminha... */
 
+@import "fonts/ravie.css";
+@import "fonts/verdana.css";
 
 body {
   background-color: #fff;
@@ -14,6 +16,7 @@ strong {
   background-image: linear-gradient(to bottom, #f6f1b2, #4599b2 80%);
   border-left: 1px solid #d3d3d3;
   border-right: 1px solid #d3d3d3;
+  font-family: Verdana;
 }
 
 #cardapio {
@@ -32,6 +35,10 @@ strong {
 #cardapio article {
   font-size: 14px;
   color: #333;
+}
+
+#cabecalho-pagina h1 {
+  font-family: Ravie;
 }
 
 
