--- a/estilo.css
+++ b/estilo.css
@@ -6,6 +6,7 @@
 
 body {
   background-color: #fff;
+  margin: 0;
 }
 
 strong {
@@ -44,27 +45,33 @@ strong {
 
 /* EXERCÍCIO 2: layout da página */
 #recipiente {
-  /* layout da página aqui */
-  /* ... */
-  /* ... */
-  /* ... */
-  /* ... */
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+  display: grid;
+  grid-template-columns: 154px 646px;
+  grid-template-rows: 90px auto 116px;
 }
 
 #cabecalho-pagina {
-
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
 }
 
 #lateral {
-
+  width: 154px;
+  grid-row: 1 / 2;
+  grid-column: 1 / 4;
 }
 
 #cardapio {
-
+  grid-row: 2 / 3;
+  grid-column: 2 / 3; 
 }
 
 #rodape-pagina {
-
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
 }
 
 
