--- a/estilo.css
+++ b/estilo.css
@@ -50,7 +50,7 @@ strong {
   width: 800px;
   display: grid;
   grid-template-columns: 154px 646px;
-  grid-template-rows: 90px auto 116px;
+  grid-template-rows: 100px auto 116px;
 }
 
 #cabecalho-pagina {
@@ -78,7 +78,9 @@ strong {
 
 /* EXERCÍCIO 3: cabeçalho da página */
 #cabecalho-pagina {
-
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
 }
 
 #cabecalho-pagina h1 {
@@ -86,6 +88,7 @@ strong {
   font-size: 36px;
   color: #e90c0c;
   font-weight: normal;
+  text-align: center;
 }
 
 #cabecalho-pagina h2 {
@@ -93,6 +96,7 @@ strong {
   font-size: 24px;
   color: #333;
   font-weight: normal;
+  text-align: right;
 }
 
 /* EXERCÍCIO 4: cada item do menu */
