--- a/estilo.css
+++ b/estilo.css
@@ -101,6 +101,14 @@ strong {
 
 /* EXERCÍCIO 4: cada item do menu */
 article {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
+
+#cardapio {
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 
