--- a/estilo.css
+++ b/estilo.css
@@ -114,6 +114,11 @@ article {
 
 /* EXERCÍCIO 5: o rodapé */
 #rodape-pagina {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 46px;
+  padding-bottom: 25px;
+  padding-right: 15px;
 }
 
 /* EXERCÍCIO 6: lateral */
