--- a/estilo.css
+++ b/estilo.css
@@ -60,8 +60,8 @@ strong {
 
 #lateral {
   width: 154px;
-  grid-row: 1 / 2;
-  grid-column: 1 / 4;
+  grid-row: 1 / 4;
+  grid-column: 1 / 2;
 }
 
 #cardapio {
@@ -123,6 +123,9 @@ article {
 
 /* EXERCÍCIO 6: lateral */
 #lateral {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 
